refactored header for 75% zoom and fixed inner-content spacing

--- a/src/core/Header.scss
+++ b/src/core/Header.scss
@@ -1,100 +1,103 @@
+@import "../index.scss";
 
-.header{
+@each $p in ($md-percentage, $lg-percentage) {
+  @media (min-width: $p * 1024px) {
+    .header {
+      height: $p * 192px;
+    }
+
+    .headerTitle {
+      font-size: $p * 26px;
+      line-height: $p * 1.38;
+      margin: $p * 24px $p * 24px $p * 12px $p * 24px;
+    }
+
+    .statusToggle {
+      width: $p * 50px;
+      height: $p * 24px;
+      font-size: $p * 12px;
+      margin-top: $p * 32px;
+      padding: $p * 5px $p * 10px $p * 5px $p * 10px;
+    }
+
+    .editActivityButton {
+      font-size: $p * 14px;
+      margin-right: $p * 12px;
+      margin-top: $p * 24px;
+      width: $p * 96px;
+      height: $p * 36px;
+      line-height: $p * 1.38;
+    }
+
+    .addActivityButton {
+      font-size: $p * 14px;
+      width: $p * 96px;
+      height: $p * 36px;
+      line-height: $p * 1.38;
+      margin-top: $p * 24px;
+    }
+
+    .editB {
+      margin-right: $p * 24px;
+    }
+
+    .addB {
+      margin-right: $p * 12px;
+    }
+
+    .potentialEmployer {
+      height: $p * 23px;
+      font-size: $p * 18px;
+      line-height: $p * 1.33;
+      margin: $p * 12px $p * 24px;
+    }
+
+    .lastUpdated {
+      font-size: $p * 12px;
+      margin: $p * 0px $p * 24px;
+    }
+
+    .latestUpdatedText {
+      font-size: $p * 16px;
+      margin: $p * 0px $p * 24px;
+      line-height: $p * 1.5;
+    }
+  }
+}
+
+.header {
   width: 100%;
-  height: 192px;
   background-color: #f8f9fa;
   box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.04), 0 1px 2px 0 rgba(0, 0, 0, 0.04);
 }
 
-.headerRectangle {
-  width: 50px;
-  height: 24px;
+.headerTitle {
+  font-weight: 600;
+  float:left;
+}
+
+.statusToggle {
   border-radius: 2px;
   background-color: #38d682;
-  float:left;
-}
-
-.potentialEmployer{
-  height: 23px;
-  font-size: 18px;
+  float: left;
   font-weight: 600;
-  line-height: 1.33;
-  text-align: left;
-  color: #585b60;
-  margin: 12px 0px 12px 12px;
+  text-align: center;
+  color: $white;
+  text-transform: uppercase;
 }
 
-.lastUpdated{
-  height: 17px;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 1;
-  text-align: left;
-  color: #a0a1a5;
-  margin: 12px 0px 12px 12px;
-}
-
-.latestUpdatedText{
-  font-size: 16px;
-  margin: 12px 0px 12px 12px;
-  line-height: 1.5;
-  text-align: left;
-  color: #25272a;
-}
-
-.headerTitle{
-  font-size: 26px;
-  line-height: 1.38;
-  margin: 24px 24px 12px 24px;
-  font-weight: 600;
-  float:left;
-}
-
-.headerRectangle {
-  font-size: 12px;
-  font-weight: 600;
-  width: 50px;
-  line-height:24px;
-  border-radius: 2px;
-  background-color: #38d682;
-  text-align:center;
-  color:white;
-  float:left;
-  margin-top:32px;
-}
-
-.headerRectText{
-  font-size: 12px;
-  font-weight: 600;
-  text-align: left;
-  color: #ffffff;
-  margin: 5px 10px 5px 10px;
-}
-
-.editActivityButton{
+.editActivityButton {
   background-color: #585b60;
   text-align: center;
   color: #ffffff;
-  font-size: 14px;
   float:right;
-  margin-right:12px;
-  margin-top: 24px;
-  width: 96px;
-  height: 36px;
-  line-height: 1.38;
 }
 
-.addActivityButton{
+.addActivityButton {
   background-color: #cb9c59;
   text-align: center;
   color: #ffffff;
-  font-size: 14px;
   float:right;
-  font-weight: 600;
-  width: 96px;
-  height: 36px;
-  line-height: 1.38;
-  margin-top: 24px;
 }
 
 input {
@@ -102,16 +105,33 @@ input {
   border-radius: 2px;
 }
 
-.editB, .addB, .headerRect{
+.editB, .addB, .headerRect {
   display:inline-block;
 }
 
-.editB{
+.editB {
   float:right;
-  margin-right:24px;
 }
 
-.addB{
+.addB {
   float:right;
-  margin-right:12px;
 }
+
+.potentialEmployer {
+  font-weight: 600;
+  text-align: left;
+  color: #585b60;
+}
+
+.lastUpdated {
+  font-weight: bold;
+  text-align: left;
+  color: #a0a1a5;
+  text-transform: uppercase;
+}
+
+.latestUpdatedText {
+  text-align: left;
+  color: #25272a;
+}
+
