--- a/src/core/SidebarRight.scss
+++ b/src/core/SidebarRight.scss
@@ -207,6 +207,8 @@
       width: $p * 306px;
       height: $p * 84px;
       margin: $p * 24px;
+      padding: 6px;
+      color: $slate-grey;
     }
 
     .post-info {
